--- a/webMetics/Views/Usuario/InformacionPersonal.cshtml
+++ b/webMetics/Views/Usuario/InformacionPersonal.cshtml
@@ -120,15 +120,16 @@
                     </table>
                 </div>
 
-
                 @if (ViewBag.Inscripciones == null)
                 {
                     @if (ViewBag.ListaGrupos == null)
                     {
+                        <br />
                         <h5 class="text-center">No tiene grupos creados.</h5>
                     }
                     else
                     {
+                        <br />
                         <div class="mt-4">
                             <h3 class="">Módulos creados</h3>
                             <table class="table table-striped" id="tblCustomers">
@@ -179,56 +180,59 @@
                 }
                 else
                 {
-                    <br />
-                    <div class="mt-4">
-                        <h3 class="">Inscripciones</h3>
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th scope="col" style="width: 25%">Módulos Inscritos</th>
-                                    <th class="text-center" scope="col" style="width: 15%">Calificación</th>
-                                    <th class="text-center" scope="col" style="width: 15%">Horas<br>Matriculadas</th>
-                                    <th class="text-center" scope="col" style="width: 15%">Horas<br>Aprobadas</th>
-                                    <th class="text-center" scope="col" style="width: 15%">Total Horas<br>Matriculadas</th>
-                                    <th class="text-center" scope="col" style="width: 15%">Total Horas<br>Aprobadas</th>
-                                </tr>
-                            </thead>
+                    @if (ViewBag.Role == 0)
+                    {
+                        <br />
+                        <div class="mt-4">
+                            <h3 class="">Inscripciones</h3>
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col" style="width: 25%">Módulos Inscritos</th>
+                                        <th class="text-center" scope="col" style="width: 15%">Calificación</th>
+                                        <th class="text-center" scope="col" style="width: 15%">Horas<br>Matriculadas</th>
+                                        <th class="text-center" scope="col" style="width: 15%">Horas<br>Aprobadas</th>
+                                        <th class="text-center" scope="col" style="width: 15%">Total Horas<br>Matriculadas</th>
+                                        <th class="text-center" scope="col" style="width: 15%">Total Horas<br>Aprobadas</th>
+                                    </tr>
+                                </thead>
 
-                            <tbody class="align-middle">
-                                <tr>
-                                    <td class="my-3" colspan="4">
-                                        @foreach (var inscripcion in ViewBag.Inscripciones)
-                                        {
-                                            <table class="w-100">
-                                                <tr>
-                                                    <td class="my-2" style="width: 25%">
-                                                        <i class="bi bi-check"></i> @inscripcion.nombreGrupo (Grupo @inscripcion.numeroGrupo)
-                                                    </td>
-                                                    <td class="my-2 text-center" style="width: 15%">
-                                                        Calificación @* <span>@inscripcion.calificacion</span> *@
-                                                    </td>
-                                                    <td class="my-2 text-center" style="width: 15%">
-                                                        @inscripcion.horasMatriculadas
-                                                    </td>
-                                                    <td class="my-2 text-center" style="width: 15%">
-                                                        @inscripcion.horasAprobadas
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        }
-                                    </td>
+                                <tbody class="align-middle">
+                                    <tr>
+                                        <td class="my-3" colspan="4">
+                                            @foreach (var inscripcion in ViewBag.Inscripciones)
+                                            {
+                                                <table class="w-100">
+                                                    <tr>
+                                                        <td class="my-2" style="width: 25%">
+                                                            <i class="bi bi-check"></i> @inscripcion.nombreGrupo (Grupo @inscripcion.numeroGrupo)
+                                                        </td>
+                                                        <td class="my-2 text-center" style="width: 15%">
+                                                            Calificación @* <span>@inscripcion.calificacion</span> *@
+                                                        </td>
+                                                        <td class="my-2 text-center" style="width: 15%">
+                                                            @inscripcion.horasMatriculadas
+                                                        </td>
+                                                        <td class="my-2 text-center" style="width: 15%">
+                                                            @inscripcion.horasAprobadas
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            }
+                                        </td>
 
-                                    <td class="my-3 text-center" style="width: 15%">
-                                        <span>@ViewBag.Participante.horasMatriculadas</span>
-                                    </td>
+                                        <td class="my-3 text-center" style="width: 15%">
+                                            <span>@ViewBag.Participante.horasMatriculadas</span>
+                                        </td>
 
-                                    <td class="my-3 text-center" scope="col" style="width: 15%">
-                                        <span>@ViewBag.Participante.horasAprobadas</span>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                                        <td class="my-3 text-center" scope="col" style="width: 15%">
+                                            <span>@ViewBag.Participante.horasAprobadas</span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    }
                 }
             }
             <div class="d-flex justify-content-center my-4">
