--- a/webMetics/Views/Usuario/InformacionPersonal.cshtml
+++ b/webMetics/Views/Usuario/InformacionPersonal.cshtml
@@ -208,13 +208,13 @@
                                                             <i class="bi bi-check"></i> @inscripcion.nombreGrupo (Grupo @inscripcion.numeroGrupo)
                                                         </td>
                                                         <td class="my-2 text-center" style="width: 15%">
-                                                            Calificación @* <span>@inscripcion.calificacion</span> *@
+                                                            @((inscripcion.calificacion ?? 0))
                                                         </td>
                                                         <td class="my-2 text-center" style="width: 15%">
-                                                            @inscripcion.horasMatriculadas
+                                                            @((inscripcion.horasMatriculadas ?? 0))
                                                         </td>
                                                         <td class="my-2 text-center" style="width: 15%">
-                                                            @inscripcion.horasAprobadas
+                                                            @((inscripcion.horasAprobadas ?? 0))
                                                         </td>
                                                     </tr>
                                                 </table>
