--- a/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
+++ b/webMetics/Views/Calificaciones/VerCalificaciones.cshtml
@@ -49,12 +49,20 @@
                         {
                             @Html.AntiForgeryToken()
                             <form>
-                                <div class="mb-3 d-flex">
+                                <div class="mb-3 d-flex" style="max-width: 600px">
                                     <label for="file"></label>
                                     <input type="file" class="form-control" name="file" id="file">
                                     <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
 
                                     <input type="hidden" name="idGrupo" id="idGrupo" value="@ViewBag.IdGrupo">
+                                </div>
+
+                                <div class="mb-4 bg-light p-3 rounded">
+                                    <small class="text-muted">
+                                        Subir un archivo en formato <strong>XLS</strong> o <strong>XLSX</strong> con las siguientes columnas:
+                                        <br />
+                                        Correo Institucional, Calificación
+                                    </small>
                                 </div>
                             </form>
                         }
