--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -39,26 +39,8 @@
         <div class="table-responsive">
             <div class="d-flex justify-content-between mb-4">
                 <div>
-                    @using (Html.BeginForm("SubirArchivoExcel", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                    {
-                        <form>
-                            <div class="mb-3 d-flex align-items-center">
-                                <input type="file" class="form-control" name="file" id="file" accept=".xls,.xlsx" required>
-                                @Html.ActionLink("   Plantilla", "DescargarPlantillaSubirParticipantes", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download ms-2 w-25" })
-                                <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
-                            </div>
-                        </form>
-                    }
-                    <div class="mb-4 bg-light p-3 rounded">
-                        <small class="text-muted">
-                            Subir un archivo en formato <strong>XLS</strong> o <strong>XLSX</strong> con las siguientes columnas:
-                            <br />
-                            Unidad Académica, Nombre, Primer Apellido, Segundo Apellido, Correo Institucional, Horas Aprobadas
-                        </small>
-                    </div>
-                    <hr />
                     <div class="mb-3 d-flex justify-content-between">
-                        <div class="p-2 rounded bg-light w-100">
+                        <div class="w-100" style="max-width: 700px;">
                             @using (Html.BeginForm("ActualizarCorreoLimiteHoras", "Inscripcion", FormMethod.Post, new { enctype = "multipart/form-data" }))
                             {
                                 <form>
@@ -72,6 +54,26 @@
                                 </form>
                             }
                         </div>
+                    </div>
+                    <hr />
+                    
+                    @using (Html.BeginForm("SubirArchivoExcel", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
+                        <form>
+                            <small class="ms-1 text-secondary">Subir lista de participantes</small>
+                            <div class="mb-2 d-flex align-items-center" style="max-width: 700px;">
+                                <input type="file" class="form-control" name="file" id="file" accept=".xls,.xlsx" required>
+                                @Html.ActionLink("   Plantilla", "DescargarPlantillaSubirParticipantes", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download ms-2 w-25" })
+                                <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
+                            </div>
+                        </form>
+                    }
+                    <div class="mb-4 bg-light p-3 rounded">
+                        <small class="text-muted">
+                            Subir un archivo en formato <strong>XLS</strong> o <strong>XLSX</strong> con las siguientes columnas:
+                            <br />
+                            Unidad Académica, Nombre, Primer Apellido, Segundo Apellido, Correo Institucional, Horas Aprobadas
+                        </small>
                     </div>
                 </div>
 
