--- a/webMetics/Views/Grupo/EditarGrupo.cshtml
+++ b/webMetics/Views/Grupo/EditarGrupo.cshtml
@@ -3,7 +3,6 @@
 @using webMetics.Helpers
 @{
     ViewBag.Title = "Editar Módulo";
-
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
 
@@ -104,18 +103,23 @@
                             @Html.ValidationMessageFor(grupoModel => grupoModel.horario, "", new { @class = "text-danger" })
                         </div>
 
+                        <!-- Nuevo Dropdown para seleccionar temas -->
                         <div class="form-group mt-1">
-                            @Html.LabelFor(grupoModel => grupoModel.nombreTema, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownListFor(grupoModel => grupoModel.idTema, ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema...", new { @class = "form-select" })
-                            @Html.ValidationMessageFor(grupoModel => grupoModel.nombreTema, "", new { @class = "text-danger" })
+                            @Html.LabelFor(grupoModel => grupoModel.TemasSeleccionados, new { Style = "font-size:22px" })
+                            @Html.ListBoxFor(grupoModel => grupoModel.TemasSeleccionados,
+                                     ViewData["Temas"] as IEnumerable<SelectListItem>,
+                                     new { @class = "form-select", size = "10" })
+                            @Html.ValidationMessageFor(grupoModel => grupoModel.TemasSeleccionados, "", new { @class = "text-danger" })
                         </div>
 
+                        <!-- Dropdown para categorías -->
                         <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.nombreCategoria, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
                             @Html.DropDownListFor(grupoModel => grupoModel.idCategoria, ViewData["Categorias"] as List<SelectListItem>, "Seleccione un nivel...", new { @class = "form-select" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.nombreCategoria, "", new { @class = "text-danger" })
                         </div>
 
+                        <!-- Dropdown para asesores -->
                         <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.nombreAsesor, new { Style = "font-size:22px" })
                             @Html.DropDownListFor(grupoModel => grupoModel.idAsesor, ViewData["Asesores"] as List<SelectListItem>, "Seleccione un(a) facilitador(a)...", new { @class = "form-select", @id = "asesorSelect" })
@@ -130,7 +134,6 @@
                                 <br />
                                 @Html.EditorFor(grupoModel => grupoModel.fechaInicioInscripcion, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(grupoModel => grupoModel.fechaInicioInscripcion, "", new { @class = "text-danger" })
-
                             </div>
                             <div class="col">
                                 @Html.LabelFor(grupoModel => grupoModel.fechaFinalizacionInscripcion)
@@ -140,8 +143,9 @@
                             </div>
                         </div>
 
+                        <br />
                         <div class="row mt-3">
-                            <h4>Fecha de inicio y fin del grupo</h4>
+                            <h4>Fechas del módulo</h4>
                             <div class="col">
                                 @Html.LabelFor(grupoModel => grupoModel.fechaInicioGrupo)
                                 <br />
@@ -156,31 +160,14 @@
                             </div>
                         </div>
 
+                        <br />
                         <div class="row mt-3">
-                            @if (ViewBag.Adjunto != null && ViewBag.Adjunto.Length > 0)
-                            {
-                                <div class="my-3">
-                                    <h4 class="mt-4">Archivo Actual</h4>
-                                    <iframe class="my-2 rounded" id="pdfPreview" src="data:application/pdf;base64,@(ViewBag.Adjunto)" width="100%" height="500" style="border: none;"></iframe>
-                                </div>
-                            }
-
-                            <div class="my-3 p-3 bg-light rounded">
-                                <h4>Adjuntar Nuevo Archivo</h4>
-                                <small class="text-muted">Subir un archivo en formato <strong>PDF</strong> menor a 5 MB.</small>
-                                <div class="form-group mt-3">
-                                    @Html.TextBoxFor(grupoModel => grupoModel.archivoAdjunto, null, new { type = "file", @class = "form-control" })
-                                </div>
+                            <div class="col">
+                                <button type="submit" class="btn btn-primary">Guardar</button>
                             </div>
-                        </div>
-                    </div>
-
-                    <div class="row justify-content-center m-4">
-                        <div class="col-auto">
-                            @Html.ActionLink("Cancelar", "ListaGruposDisponibles", "Grupo", new { }, new { @class = "btn btn-secondary btn-block" })
-                        </div>
-                        <div class="col-auto">
-                            <input type="submit" class="btn btn-primary btn-block" value="Guardar" />
+                            <div class="col text-end">
+                                <a class="btn btn-danger" href="@Url.Action("Index")">Cancelar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -190,35 +177,5 @@
 }
 else
 {
-    <script>
-        window.location.href = '@Url.Action("CerrarSesion", "Usuario")';
-    </script>
+    <h1>No tiene permisos para editar el módulo</h1>
 }
-
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-    $(document).ready(function () {
-        function verificarModalidad() {
-            var modalidadSeleccionada = $('#modalidadSelect').val();
-            if (modalidadSeleccionada === '@webMetics.Models.TipoModalidad.Autogestionado') {
-                $('#asesorSelect').prop('disabled', true);
-                $('#asesorSelect').val('');
-                $('#horarioText').prop('disabled', true);
-                $('#horarioText').val('');
-                $('#lugarText').prop('disabled', true);
-                $('#lugarText').val('');
-            } else {
-                $('#asesorSelect').prop('disabled', false);
-                $('#horarioText').prop('disabled', false);
-                $('#lugarText').prop('disabled', false);
-            }
-        }
-
-        verificarModalidad();
-
-        // Llamar a la función cuando cambie la modalidad
-        $('#modalidadSelect').change(function () {
-            verificarModalidad();
-        });
-    });
-</script>
