Estilo de texto.

--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -69,7 +69,7 @@
                                         </div>
                                     </div>
                                     <br />
-                                    <div class="justify-content-center">
+                                    <div class="justify-content-center mt-3 text-secondary">
                                         <strong>Fecha de inicio:</strong> @grupo.fechaInicioGrupo.ToString("dd/MM/yyyy") -
                                         <strong>Fin del módulo:</strong> @grupo.fechaFinalizacionGrupo.ToString("dd/MM/yyyy")
                                     </div>
@@ -225,7 +225,7 @@
                                         }
                                     </div>
                                     <br />
-                                    <div class="justify-content-center">
+                                    <div class="justify-content-center mt-3 text-secondary">
                                         <strong>Fecha de inicio:</strong> @grupo.fechaInicioGrupo.ToString("dd/MM/yyyy") -
                                         <strong>Fin del módulo:</strong> @grupo.fechaFinalizacionGrupo.ToString("dd/MM/yyyy")
                                     </div>
